force-app/main/default/objects/Reference_Do_Not_Contact__c/Reference_Do_Not_Contact__c.object-meta.xml
<CustomObject>
    <label>Reference Do Not Contact Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference Do Not Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Do Not Contact Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>