force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Branch_Client_Num__c.field-meta.xml
<CustomField>
    <fullName>Branch_Client_Num__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Client Num</label>
    <length>15</length>
    <type>Text</type>
</CustomField>