force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/CaseID__c.field-meta.xml
<CustomField>
    <fullName>CaseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference Do Not Contact Requests</relationshipLabel>
    <relationshipName>Reference_Do_Not_Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>