force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Consent_to_Text__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>from Lead or Contact</description>
    <label>Consent to Text</label>
    <type>Checkbox</type>
</CustomField>