force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Consent_to_Text_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Text_Date__c</fullName>
    <description>from Lead or Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent to Text Date</label>
    <type>DateTime</type>
</CustomField>