force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Consent_to_Text_reason__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Text_reason__c</fullName>
    <description>case #26177053 picklist is set by workflow or process builder and passed to Reference DNC Request for logging</description>
    <label>Consent to Text reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead Loader change</fullName>
            </value>
            <value>
                <fullName>Mobile Phone change</fullName>
            </value>
            <value>
                <fullName>User change</fullName>
            </value>
            <value>
                <fullName>Expired auto reset</fullName>
            </value>
            <value>
                <fullName>Web Lead Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>