force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact linked to Consent to Text</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference Do Not Contact Requests (Contact)</relationshipLabel>
    <relationshipName>Reference_Do_Not_Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>