force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>