force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>