force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Email_Opt_Out_Client_Level__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Client_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out Client Level</label>
    <type>Checkbox</type>
</CustomField>