force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead linked to Consent to Text</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Reference Do Not Contact Requests</relationshipLabel>
    <relationshipName>Reference_Do_Not_Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>