force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Num_Records_Updated__c.field-meta.xml
<CustomField>
    <fullName>Num_Records_Updated__c</fullName>
    <label>Num Records Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>