force-app/main/default/objects/Reference_Do_Not_Contact__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requestor</label>
    <length>128</length>
    <type>Text</type>
</CustomField>