force-app/main/default/objects/Reference_Do_Not_Contact__c/recordTypes/Do_Not_Contact_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Do_Not_Contact_Record_Type</fullName>
    <active>true</active>
    <label>Do Not Contact Record Type</label>
</RecordType>