force-app/main/default/objects/Reference_Do_Not_Contact__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c,&quot;Closed - Rejected&quot;) &amp;&amp; ISPICKVAL(Rejection_Reason__c,&quot;&quot;)</errorConditionFormula>
    <errorMessage>When the Status of ‘Closed - Rejected is selected, the Rejection Reason must be populated.</errorMessage>
</ValidationRule>