force-app/main/default/objects/Reference_Do_Not_Contact__c/listViews/Virtual_Sales_DNC_Reference_Do_Not_Contact.listView-meta.xml
<ListView>
    <fullName>Virtual_Sales_DNC_Reference_Do_Not_Contact</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>CaseID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CaseID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Virtual Sales DNC</label>
    <queue>Virtual_Sales_DNC</queue>
</ListView>